[tool.poetry]
name = "aws-utils"
version = "0.1.0"
description = "Python tools for AWS"
authors = ["Roberto Alamos <ralamosm@gmail.com>"]
readme = "README.md"
packages = [{include = "aws_utils"}]


[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.28.17"
requests = "^2.31.0"
ipaddress = "^1.0.23"
click = "^8.1.3"
click-tools = {git = "https://github.com/ralamosm/click-tools.git"}


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
queuer = "aws_utils.cli.queuer:cli"